traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt=0
  ecritMessage()
  while (PositionFinale()==false){
    PositionSuivante()
    cpt+=1
    ecritMessage()
  }
}

def PositionFinale():Boolean={
  if (getMondeLargeur()==getX() && getMondeHauteur()==getY()){
    return true 
  }
  return false
}

def PositionSuivante(){
  if (getY()==6){
    setPos(getX+1,0)
  }else{
    setPos(getX,getY+1)
  }
}